# vehicle_4ws_description

./: CMakeLists.txt  package.xml
config/: controller.yaml
include/: Bezier.h  callback.hpp  differential_equations.hpp  differential_equations_dynamics.hpp  dynamics_integrator.hpp  getInputValue.hpp  getInputValue_dynamics.hpp  initial.hpp  mathFunc.h  pidTau.hpp  vehicle.hpp
launch/: Xaxis_tracking.launch  Xaxis_tracking_bezier.launch  controller.launch  display.launch  gazebo.launch  sim.launch  test.launch  vehicle_dynamics.launch  vehicle_dynamics_15.launch  vehicle_dynamics_flat.launch
meshes/: base_link.stl  new_hinge_1.stl  new_hinge_2.stl  new_hinge_3.stl  new_hinge_4.stl  new_wheel_1.stl  new_wheel_2.stl  new_wheel_3.stl  new_wheel_4.stl  v1_front_1.stl  v1_rear_1.stl
models/hill/: model.config  model.sdf
models/hill/meshs/: hill.stl
src/: Bezier.cpp  Xaxis_tracking.cpp  callback.cpp  differential_equations.cpp  differential_equations_dynamics.cpp  dynamics_integrator.cpp  ex9.cpp  getInputValue.cpp  getInputValue_dynamics.cpp  initial.cpp  mathFunc.cpp  test_motion.cpp  trajectory_path_publisher.cpp  vehicle.cpp  vehicle_dynamics.cpp
urdf/: materials.xacro  vehicle_4ws.gazebo  vehicle_4ws.trans  vehicle_4ws.xacro  vehicle_4ws_Xaxis_tracking.xacro  vehicle_4ws_real.xacro
worlds/: marker.world
